<resources>
    <string name="app_name">SlotMachine</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="devName">Desenvolvido por André Casarini</string>
    <string name="play">Play</string>
    <string name="sobre">Sobre</string>
    <string name="gameName">Monster Hunter Slot V 1.0</string>
    <string name="voltar">voltar</string>
    <string name="hunt">Hunt</string>
    <string name="winMessage">Você Ganhou</string>
    <string name="midPrize">Pequena Premiação</string>
    <string name="lost">Você Perdeu</string>
    <string name="nameRequest">Digite Seu Nome</string>
    <string name="selecione_seu_sexo">Selecione seu Sexo</string>
    <string name="sexM">Masculino</string>
    <string name="sexF">Feminino</string>
    <string name="value1">1</string>
    <string name="value2">2</string>
    <string name="value3">3</string>
    <string name="value4">4</string>
    <string name="value5">5</string>
    <string name="value6">6</string>
    <string name="value7">7</string>
    <string name="value8">8</string>
    <string name="value9">9</string>
    <string name="value10">10</string>
    <string name="userError">Informe o seu nome</string>
    <string name="USER">USUARIO</string>
    <string name="COINS">COINS</string>
    <string name="SEX">SEX</string>
    <string name="sexSelect">Selecione seu Sexo</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="value">VALOR</string>
    <string name="backtomenu">Voltar ao Menu</string>
    <string name="strNumFich">Numero De Fichas</string>
    <string name="fichas">Fichas :\u0020\u0020\u0020</string>
    <string name="strError">ERRO</string>
</resources>
