<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.example.andre.slotmachine.UserActivity"
    android:background="@drawable/background_menu">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameRequest"
        android:textSize="@dimen/textUsrSize"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textUsrSize"
        android:id="@+id/etUserName"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/selecione_seu_sexo"
        android:textSize="@dimen/textUsrSize"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rgSex"
        android:orientation="horizontal">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbMasc"
                android:text="@string/sexM"
                android:textSize="@dimen/sexSize"/>
            <RadioButton
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFem"
                android:text="@string/sexF"
                android:textSize="@dimen/sexSize"/>
    </RadioGroup>
    <ImageView
        android:layout_width="@dimen/imgRes"
        android:layout_height="@dimen/imgRes"
        android:layout_gravity="center"
        android:id="@+id/ivSex"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strNumFich"
        android:textStyle="bold"
        android:textSize="@dimen/sexSize"/>
    <Spinner
        android:layout_marginTop="@dimen/sz30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spCoins"
        android:entries="@array/coinAmount"
        android:background="@color/btText"></Spinner>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btPlay"
        android:text="@string/hunt"
        android:layout_marginBottom="@dimen/btMargin"
        android:textColor="@color/btText"
        android:background="@drawable/custom_button"
        android:onClick="goPlay"
        android:layout_marginTop="@dimen/sz80dp"/>

</LinearLayout>
